--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,92 @@
     transform: rotate(360deg);
   }
 }
+
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.heading_style{
+  padding: 30px;
+  text-align: center;
+  font-family: "Raleway",sans-serif;
+  text-transform: uppercase;
+  font-size: 17px;
+  letter-spacing: 2px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  color:black;
+  background-color: rgb(111, 138, 121);
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  
+
+}
+.cards{
+  width: 100%;
+  height: auto;
+}
+.card{
+  margin: 6%;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0,1);
+  background-color: #fff;
+  width: 21.25%;
+  border-radius: 12px;
+  box-shadow: 0px 13px 10px -7px rgba(0,0,0, 0.1);
+  float: left;
+}
+
+.card:hover{
+  box-shadow:0px 30px 18px -8px rgba(0,0,0, 0.1);
+  transform: scale(1.05,1.05);
+}
+.card_img{
+  width: 100%;
+  height: 235px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+
+}
+.card_info{
+  background-color: #fff;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  padding: 16px 24px 24px 24px;
+
+}
+.card_category{
+  font-family: "Raleway",sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  color: #868686;
+  background-color: #fff;
+}
+
+.card_title{
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-family: "Raleway",sans-serif;
+  background-color: #fff;
+  text-transform: capitalize;
+}
+
+.con{
+  width: 100px;
+  /* color: black; */
+  clear:both;
+  position:relative;
+  font-size:11px;
+  text-align:center;
+  margin-bottom: 30px;
+  
+}
+.con:hover{
+  color: red;
+  
+}
+
